--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-* {
+body {
   margin: 0 auto;
 }
 
@@ -11,3 +11,4 @@
 @import 'blocks/promo';
 @import 'base/button';
 @import 'blocks/merit';
+@import 'blocks/news';
