--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -1,17 +1,30 @@
 .button {
-    &__slider {
-        width: 200px;
-        height: 39px;
-        margin-top: 49px;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 11px;
-        border: 5px solid #a50e18;
-        background-color: rgba(130, 23, 30, 0);
-        text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-        color: #e5e3e3;
-        font-family: 'Montserrat Medium';
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: 2.52px;
-    }
+  width: 200px;
+  height: 39px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 11px;
+  border: 5px solid #a50e18;
+  background-color: rgba(130, 23, 30, 0);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  color: #e5e3e3;
+  font-family: 'Montserrat Medium';
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 2.52px;
+  &:hover {
+    background-color: #b41e1c;
+    border: none;
+  }
+  &:active {
+    background-color: #760b12;
+  }
+  &__slider {
+    margin-top: 49px;
+  }
+  &__reserve {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    align-items: center;
+  }
 }
