--- a/src/sass/blocks/_merit.scss
+++ b/src/sass/blocks/_merit.scss
@@ -49,12 +49,17 @@
   display: inline-block;
   width: 320px;
   height: 3px;
-  background-color: $main-color;
+  background-color: #82171e;
   margin-top: 23px;
   &__news {
     display: flex;
     margin: 0 auto;
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+  &__reserve {
+    display: flex;
+    justify-content: center;
+    margin: auto;
   }
 }
