--- a/src/sass/blocks/_reserve.scss
+++ b/src/sass/blocks/_reserve.scss
@@ -1,7 +1,70 @@
 .reserve {
+  background: url('../img/reserve_bg.jpg') center (center/cover) no-repeat;
   &__wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0 auto;
+  }
+  &__pc {
+    background-color: $main-color;
+
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+    color: #c4c4c4;
+
+    font-family: 'Montserrat Medium';
+
+    font-size: 30px;
+
+    font-weight: 500;
+
+    letter-spacing: 2.4px;
+
+    line-height: 75px;
+
+    text-transform: uppercase;
+  }
+  &__time {
+    color: #c4c4c4;
+    margin-top: 15px;
+    font-family: 'Montserrat Light';
+
+    font-size: 16px;
+
+    font-weight: 300;
+
+    letter-spacing: 1.28px;
+
+    line-height: 21.06px;
+    text-align: center;
+  }
+  &__morning {
+    list-style-type: none;
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    color: #c4c4c4;
+    font-family: 'Montserrat Italic';
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 4.32px;
+    line-height: 21.06px;
+    text-align: center;
+    padding-left: 0;
+    li {
+      margin-top: 5px;
+    }
+  }
+  &__title {
+    width: 342px;
+    height: 70px;
+    border-radius: 11px;
+    border: 5px solid #82171e;
+    background-color: rgba(130, 23, 30, 0);
+    text-align: center;
+  }
+  &__ps {
+    width: 33.333%;
+  }
+  &__pro {
+    width: 33.333%;
   }
 }
