--- a/src/sass/libs/_font.scss
+++ b/src/sass/libs/_font.scss
@@ -7,7 +7,25 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Montserrat Light';
+  src: url('../fonts/Montserrat-Light.woff');
+  src: url('../fonts/Montserrat-Light.woff') format('embedded-opentype'),
+    url('../fonts/Montserrat-Light.woff') format('woff'),
+    url('../fonts/Montserrat-Light.woff') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: 'Montserrat Italic';
+  src: url('../fonts/Montserrat-MediumItalic.woff');
+  src: url('../fonts/Montserrat-MediumItalic.woff') format('embedded-opentype'),
+    url('../fonts/Montserrat-MediumItalic.woff') format('woff'),
+    url('../fonts/Montserrat-MediumItalic.woff') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 @font-face {
   font-family: 'Source Sans Pro';
   src: url('../fonts/sourcesanspro.woff');
