--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,3 +13,6 @@ body {
 @import 'blocks/merit';
 @import 'blocks/news';
 @import 'blocks/reserve';
+@import 'blocks/_modal';
+@import 'blocks/_footer';
+@import 'base/_media';
