--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -7,7 +7,7 @@
   background-color: rgba(130, 23, 30, 0);
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   color: #e5e3e3;
-  font-family: 'Montserrat Medium';
+  font-family: 'Montserrat';
   font-size: 14px;
   font-weight: 600;
   letter-spacing: 2.52px;
@@ -26,5 +26,14 @@
     justify-content: center;
     margin: auto;
     align-items: center;
+    margin-top: 25px;
+    width: 264px;
+    height: 48px;
+    border: none;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+    border-radius: 11px;
+
+    background-color: $second-color;
   }
 }
