--- a/src/sass/blocks/_news.scss
+++ b/src/sass/blocks/_news.scss
@@ -12,51 +12,42 @@
     min-width: 300px;
     height: 178px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    img {
+      width: 310px;
+      height: 178px;
+    }
   }
   &__data {
-    margin-left: 80px;
+    margin-left: 60px;
   }
   &__title {
     border: 1px solid rgba(0, 0, 0, 0);
-
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-
     color: #e5e3e3;
-
     font-family: 'Montserrat Medium';
-
     font-size: 30px;
-
     font-weight: 500;
   }
   &__time {
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-
     color: #f2f2f2;
-
     font-family: 'Montserrat Medium';
-
     font-size: 13px;
-
     font-weight: 400;
-
     text-decoration: underline;
-
     text-transform: lowercase;
   }
   &__text {
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-
     color: #c4c4c4;
-
     font-family: 'Source Code Pro';
-
     font-size: 16px;
-
     font-weight: 400;
-
     letter-spacing: 0.32px;
-
-    margin-top: 30px;
+    margin-top: 20px;
   }
+}
+.line__news {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
