--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,44 +1,101 @@
 .promo {
   background: url('../img/slider_bg.jpg') center (center/cover) no-repeat;
-  padding: 0 200px;
+
+  position: relative;
+  z-index: 1;
+  &__overlay {
+    background-color: rgba(0, 0, 0, 0.35);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
 }
 
 .slider {
+  max-width: 1120px;
+  margin: auto;
+  z-index: 3;
   position: relative;
   overflow: hidden;
+  &__data {
+    padding: 68px 98px;
+  }
+  &__title {
+    border: 1px solid rgba(0, 0, 0, 0);
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    color: #e5e3e3;
+    font-family: 'Montserrat';
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 1.05px;
+    line-height: 39.5px;
+  }
+  &__time {
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    color: #f2f2f2;
+    margin-top: 15px;
+    font-family: 'Montserrat';
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: 0.33px;
+    text-decoration: underline;
+    text-transform: lowercase;
+  }
+  &__text {
+    border: 1px solid rgba(0, 0, 0, 0);
+
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+    color: #c4c4c4;
+    margin-top: 21px;
+    font-family: 'Source Code Pro';
+
+    font-size: 19px;
+
+    font-weight: 500;
+
+    letter-spacing: 0.36px;
+
+    line-height: 25px;
+    a {
+      text-decoration: none;
+      font-size: 22px;
+      color: #a50e18;
+    }
+  }
 }
 
 .slider__wrapper {
   display: flex;
-  transition: transform 0.6s ease;
+  transition: transform 1.5s ease;
 }
 
 .slider__item {
-  min-height: 469px;
   flex: 0 0 100%;
   max-width: 100%;
-}
-
-@media (min-width: 980px) {
-  .slider__item {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
 }
 
 .slider__control {
   position: absolute;
   top: 50%;
+  width: 68px;
+  height: 118px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   text-align: center;
   opacity: 0.5;
-  width: 68px;
-  height: 118px;
   transform: translateY(-50%);
-  // background: rgba(0, 0, 0, .5);
+}
+
+.slider__control:hover,
+.slider__control:focus {
+  color: #fff;
+  text-decoration: none;
+  outline: 0;
+  opacity: 0.9;
 }
 
 .slider__control_left {
@@ -66,46 +123,117 @@
   background-image: url('../img/icons/right.png');
 }
 
-/* Заголовок слайда */
-.slider {
-  &__data {
-    min-width: 816px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
+// .slider__item > div {
+//   line-height: 250px;
+//   font-size: 100px;
+//   text-align: center;
+// }
 
-  &__title {
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    color: #e5e3e3;
-    font-family: 'Montserrat Medium';
-    font-size: 30px;
-    font-weight: 700;
-    letter-spacing: 1.05px;
-    margin-left: -4px;
-  }
+// .slider {
+//   position: relative;
+//   overflow: hidden;
+// }
 
-  &__time {
-    margin-top: 15px;
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    color: #f2f2f2;
-    font-family: 'Montserrat Medium';
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 0.33px;
-    text-decoration: underline;
-    text-transform: lowercase;
-  }
+// .slider__wrapper {
+//   display: flex;
+//   transition: transform 0.6s ease;
+// }
 
-  &__text {
-    margin-top: 21px;
-    min-width: 700px;
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    color: #c4c4c4;
-    font-family: 'Source Code Pro';
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: 0.36px;
-  }
-}
+// .slider__item {
+//   min-height: 469px;
+//   flex: 0 0 100%;
+//   max-width: 100%;
+// }
+
+// @media (min-width: 980px) {
+//   .slider__item {
+//     flex: 0 0 100%;
+//     max-width: 100%;
+//   }
+// }
+
+// .slider__control {
+//   position: absolute;
+//   top: 50%;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   color: #fff;
+//   text-align: center;
+//   opacity: 0.5;
+//   width: 68px;
+//   height: 118px;
+//   transform: translateY(-50%);
+//   // background: rgba(0, 0, 0, .5);
+// }
+
+// .slider__control_left {
+//   left: 0;
+// }
+
+// .slider__control_right {
+//   right: 0;
+// }
+
+// .slider__control::before {
+//   content: '';
+//   display: inline-block;
+//   width: 68px;
+//   height: 118px;
+//   background: transparent no-repeat center center;
+//   background-size: 100% 100%;
+// }
+
+// .slider__control_left::before {
+//   background-image: url('../img/icons/left.png');
+// }
+
+// .slider__control_right::before {
+//   background-image: url('../img/icons/right.png');
+// }
+
+// /* Заголовок слайда */
+// .slider {
+//   &__data {
+//     min-width: 816px;
+//     position: absolute;
+//     left: 50%;
+//     top: 50%;
+//     transform: translate(-50%, -50%);
+//   }
+
+//   &__title {
+//     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+//     color: #e5e3e3;
+//     font-family: 'Montserrat Medium';
+//     font-size: 30px;
+//     font-weight: 700;
+//     letter-spacing: 1.05px;
+//     margin-left: -4px;
+//   }
+
+//   &__time {
+//     margin-top: 15px;
+//     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+//     color: #f2f2f2;
+//     font-family: 'Montserrat Medium';
+//     font-size: 13px;
+//     font-weight: 400;
+//     letter-spacing: 0.33px;
+//     text-decoration: underline;
+//     text-transform: lowercase;
+//   }
+
+//   &__text {
+//     margin-top: 21px;
+//     min-width: 700px;
+//     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+//     color: #c4c4c4;
+//     font-family: 'Source Code Pro';
+//     font-size: 18px;
+//     font-weight: 500;
+//     letter-spacing: 0.36px;
+//   }
+// }
+
+// ---------------------------------- test
