--- a/src/sass/libs/_font.scss
+++ b/src/sass/libs/_font.scss
@@ -1,8 +1,31 @@
 @font-face {
+  font-family: 'Montserat';
+  font-display: swap;
+  src: local('Montserrat-Light'), url('../fonts/Montserrat-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-display: swap;
+  src: local('Montserrat-Medium'), url('../fonts/Montserrat-Medium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-display: swap;
+  src: local('Montserrat-ExtraBold'), url('../fonts/Montserrat-ExtraBold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+// --------------------------------------------------
+@font-face {
   font-family: 'Montserrat Medium';
   src: url('../fonts/Montserrat-Medium.woff');
-  src: url('../fonts/Montserrat-Medium.woff') format('embedded-opentype'),
-    url('../fonts/Montserrat-Medium.woff') format('woff'),
+  src: url('../fonts/Montserrat-Medium.woff') format('embedded-opentype'), url('../fonts/Montserrat-Medium.woff') format('woff'),
     url('../fonts/Montserrat-Medium.woff') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -10,8 +33,7 @@
 @font-face {
   font-family: 'Montserrat Light';
   src: url('../fonts/Montserrat-Light.woff');
-  src: url('../fonts/Montserrat-Light.woff') format('embedded-opentype'),
-    url('../fonts/Montserrat-Light.woff') format('woff'),
+  src: url('../fonts/Montserrat-Light.woff') format('embedded-opentype'), url('../fonts/Montserrat-Light.woff') format('woff'),
     url('../fonts/Montserrat-Light.woff') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -20,17 +42,24 @@
 @font-face {
   font-family: 'Montserrat Italic';
   src: url('../fonts/Montserrat-MediumItalic.woff');
-  src: url('../fonts/Montserrat-MediumItalic.woff') format('embedded-opentype'),
-    url('../fonts/Montserrat-MediumItalic.woff') format('woff'),
+  src: url('../fonts/Montserrat-MediumItalic.woff') format('embedded-opentype'), url('../fonts/Montserrat-MediumItalic.woff') format('woff'),
     url('../fonts/Montserrat-MediumItalic.woff') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
+  font-family: 'Montserrat Bold';
+  src: url('../fonts/Montserrat-ExtraBold.woff');
+  src: url('../fonts/Montserrat-ExtraBold.woff') format('embedded-opentype'), url('../fonts/Montserrat-MediumItalic.woff') format('woff'),
+    url('../fonts/Montserrat-ExtraBold.woff') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Source Sans Pro';
   src: url('../fonts/sourcesanspro.woff');
-  src: url('../fonts/sourcesanspro.woff') format('embedded-opentype'),
-    url('../fonts/sourcesanspro.wofff') format('woff'),
+  src: url('../fonts/sourcesanspro.woff') format('embedded-opentype'), url('../fonts/sourcesanspro.wofff') format('woff'),
     url('../fonts/sourcesanspro.woff') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -38,10 +67,8 @@
 
 @font-face {
   font-family: 'Source Code Pro';
-  src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'),
-    url('../fonts/Sourcecodepromedium.woff2') format('woff2'),
-    url('../fonts/Sourcecodepromedium.woff') format('woff'),
-    url('../fonts/Sourcecodepromedium.ttf') format('truetype');
+  src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'), url('../fonts/Sourcecodepromedium.woff2') format('woff2'),
+    url('../fonts/Sourcecodepromedium.woff') format('woff'), url('../fonts/Sourcecodepromedium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
