--- a/src/sass/blocks/_news.scss
+++ b/src/sass/blocks/_news.scss
@@ -2,6 +2,7 @@
   background: url('../img/news_bg.jpg') center (center/cover) no-repeat;
   &__wrapper {
     margin-top: 45px;
+    margin: auto;
   }
   &__item {
     display: flex;
