--- a/src/sass/blocks/_reserve.scss
+++ b/src/sass/blocks/_reserve.scss
@@ -1,9 +1,11 @@
 .reserve {
   background: url('../img/reserve_bg.jpg') center (center/cover) no-repeat;
+
   &__wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 auto;
+    max-width: 80%;
   }
   &__pc {
     background-color: $main-color;
@@ -40,7 +42,6 @@
   }
   &__title {
     font-style: italic;
-    width: 342px;
     height: 70px;
     border-radius: 11px;
     border: 5px solid #82171e;
@@ -79,6 +80,7 @@
   &__ps {
     width: 33.333%;
     padding-top: 150px;
+    margin: 0 30px 0 30px;
   }
   &__pro {
     width: 33.333%;
