--- a/src/sass/blocks/_news.scss
+++ b/src/sass/blocks/_news.scss
@@ -1,5 +1,6 @@
 .news {
   background: url('../img/news_bg.jpg') center (center/cover) no-repeat;
+  margin: 0 auto;
   &__wrapper {
     margin-top: 45px;
     margin: auto;
