--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,8 @@ body {
 
 .container {
   padding: 84px 200px;
+  max-width: 1140px;
+  margin: 0 auto;
 }
 @import 'base/variables';
 @import 'libs/_font';
