--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -31,9 +31,11 @@
     height: 48px;
     border: none;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-
     border-radius: 11px;
-
     background-color: $second-color;
+    width: 88%;
+    &_ps {
+      width: 100%;
+    }
   }
 }
