--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -11,7 +11,7 @@ header {
   align-items: center;
   width: 1300px;
   img {
-    height: 150px;
+    height: 80%;
     width: 150px;
     display: flex;
   }
@@ -23,6 +23,7 @@ header {
   &__logo {
     width: 40%;
     display: flex;
+    align-items: center;
   }
 
   &__list {
