--- a/src/sass/blocks/_news.scss
+++ b/src/sass/blocks/_news.scss
@@ -29,6 +29,7 @@
     font-family: 'Montserrat Medium';
     font-size: 30px;
     font-weight: 500;
+    margin-left: -3px;
   }
   &__time {
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
