--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,7 +10,7 @@ html {
 .container {
   padding: 84px 200px;
   max-width: 1140px;
-  margin: 0 auto;
+  margin: 0 auto px;
 }
 @import 'base/variables';
 @import 'blocks/header';
