--- a/src/sass/blocks/_news.scss
+++ b/src/sass/blocks/_news.scss
@@ -1,6 +1,9 @@
 .news {
   background: url('../img/news_bg.jpg') center (center/cover) no-repeat;
   margin: 0 auto;
+  .line {
+    margin-bottom: 15px;
+  }
   &__wrapper {
     margin-top: 45px;
     margin: auto;
